--- a/locale/uz/LC_MESSAGES/lang.po
+++ b/locale/uz/LC_MESSAGES/lang.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2024-11-20 16:44+0500\n"
+"POT-Creation-Date: 2024-11-20 17:19+0500\n"
 "PO-Revision-Date: 2024-11-20 16:41+0500\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language: uz\n"
@@ -18,23 +18,51 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.9.1\n"
 
-#: handlers/users/start.py:19
+#: handlers/users/contact.py:6 keyboards/default/user.py:17
+msgid "Contact ☎️"
+msgstr "Aloqa ☎️"
+
+#: handlers/users/contact.py:8
+msgid "📲 Call center: 1174 or (71) 203-66-66"
+msgstr "📲 Aloqa markazi: 1174 or (71) 203-66-66"
+
+#: handlers/users/start.py:21
 msgid "Welcome back my hero 😊"
 msgstr "Xush kelibsiz, xo'jayin 😊"
 
-#: handlers/users/start.py:30
+#: handlers/users/start.py:33
 msgid "Sorry, you have to enter your full name"
 msgstr "Kechirasiz, to'liq ismingizni kiritishingiz kerak"
 
-#: handlers/users/start.py:39
+#: handlers/users/start.py:44
 msgid "Please, enter your phone number by the button below 👇"
 msgstr "Iltimos, telefon raqamingizni pastdagi tugmacha orqali yuboring 👇"
 
-#: handlers/users/start.py:50
+#: handlers/users/start.py:57
 msgid "You have successfully registered ✅"
 msgstr "Siz muvaffaqiyatli ro'yxatdan o'tdingiz ✅"
 
-#: handlers/users/start.py:53
+#: handlers/users/start.py:60
 msgid "Sorry, please try again later 😔"
 msgstr "Kechirasiz, qayta urinib ko'ring 😔"
+
+#: keyboards/common.py:8
+msgid "Share phone number ☎️"
+msgstr "Telefon raqamni ulashish ☎️"
+
+#: keyboards/default/user.py:10
+msgid "Menu 🍕"
+msgstr "Menyu 🍕"
+
+#: keyboards/default/user.py:13
+msgid "My orders 📖"
+msgstr "Mening buyurtmalarim 📖"
+
+#: keyboards/default/user.py:14
+msgid "Our branches 🏚"
+msgstr "Filiallarimiz 🏚"
+
+#: keyboards/default/user.py:18
+msgid "Settings ⚙️"
+msgstr "Sozlamalar ⚙️"
 
